[gd_scene format=3 uid="uid://dda3o6m7f55w8"]

[ext_resource type="Script" uid="uid://cyywq84hp72n7" path="res://flow/flow.gd" id="1_uf51a"]
[ext_resource type="PackedScene" uid="uid://d1s1x2iu5btmw" path="res://flow/stars.tscn" id="4_kprc8"]
[ext_resource type="Texture2D" uid="uid://4t01jsxcahlc" path="res://assets/images/game/heart/heart-full.png" id="5_24jle"]
[ext_resource type="Script" uid="uid://dd57mwpkwo6vi" path="res://flow/hud/lifes.gd" id="5_mrx2u"]
[ext_resource type="PackedScene" uid="uid://4jxkelyxt1ni" path="res://ui/pause.tscn" id="5_py5fq"]
[ext_resource type="PackedScene" uid="uid://c28whpgrohhub" path="res://flow/entities.tscn" id="6_24jle"]
[ext_resource type="Texture2D" uid="uid://ce33v13jk0cke" path="res://assets/images/ui/button/button-normal.png" id="6_l2wlr"]
[ext_resource type="Texture2D" uid="uid://bykljhm8s40v7" path="res://assets/images/ui/button/button-activated.png" id="7_24jle"]
[ext_resource type="PackedScene" uid="uid://4ruuk6sqyn52" path="res://flow/entities/player.tscn" id="7_l2wlr"]
[ext_resource type="FontFile" uid="uid://cn0sfewu16dwl" path="res://assets/fonts/NotoSerif-Black.ttf" id="7_u3ei0"]
[ext_resource type="Script" uid="uid://b84kycduvgdhc" path="res://flow/hud/score_label.gd" id="8_uu18g"]
[ext_resource type="PackedScene" uid="uid://b0aye71gfhw0t" path="res://flow/sounds.tscn" id="12_jhf54"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_uf51a"]
b = Vector2(480, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kprc8"]
b = Vector2(0, 640)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_py5fq"]
a = Vector2(480, 0)
b = Vector2(480, 640)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_76vpj"]
a = Vector2(0, 640)
b = Vector2(480, 640)

[node name="Flow" type="Node2D" unique_id=1479517646]
light_mask = 2
script = ExtResource("1_uf51a")

[node name="Border" type="StaticBody2D" parent="." unique_id=230778517]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border" unique_id=1715001760]
shape = SubResource("SegmentShape2D_uf51a")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border" unique_id=903102032]
shape = SubResource("SegmentShape2D_kprc8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border" unique_id=2133190999]
shape = SubResource("SegmentShape2D_py5fq")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border" unique_id=2038642758]
shape = SubResource("SegmentShape2D_76vpj")

[node name="Player" parent="." unique_id=871058792 instance=ExtResource("7_l2wlr")]
position = Vector2(227, 489)

[node name="Entities" parent="." unique_id=102654340 instance=ExtResource("6_24jle")]
entities_limit = 2
spawn_time_min = 0.2
difficulty_time = 30.0

[node name="Sounds" parent="." unique_id=544841581 instance=ExtResource("12_jhf54")]

[node name="Stars" parent="." unique_id=174312488 instance=ExtResource("4_kprc8")]

[node name="Pause" parent="." unique_id=726105523 instance=ExtResource("5_py5fq")]
layer = 4

[node name="HUD" type="CanvasLayer" parent="." unique_id=1082516350]
layer = 5
follow_viewport_enabled = true

[node name="PauseButton" type="TouchScreenButton" parent="HUD" unique_id=1140036333]
light_mask = 2
position = Vector2(414, 576)
scale = Vector2(0.2, 0.5)
texture_normal = ExtResource("6_l2wlr")
texture_pressed = ExtResource("7_24jle")
visibility_mode = 1

[node name="Lifes" type="Node2D" parent="HUD" unique_id=2048499232]
position = Vector2(32, 32)
script = ExtResource("5_mrx2u")

[node name="Heart3" type="Sprite2D" parent="HUD/Lifes" unique_id=885620989]
position = Vector2(80, 0)
texture = ExtResource("5_24jle")

[node name="Heart2" type="Sprite2D" parent="HUD/Lifes" unique_id=53886496]
position = Vector2(40, 0)
texture = ExtResource("5_24jle")

[node name="Heart1" type="Sprite2D" parent="HUD/Lifes" unique_id=666200612]
texture = ExtResource("5_24jle")

[node name="DeadTimer" type="Timer" parent="HUD/Lifes" unique_id=591285777]
wait_time = 2.0
one_shot = true

[node name="ScoreLabel" type="Label" parent="HUD" unique_id=1909340615]
offset_left = 147.0
offset_top = 17.0
offset_right = 459.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_u3ei0")
theme_override_font_sizes/font_size = 18
text = "Score: %d"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("8_uu18g")

[node name="Node2D" type="Node2D" parent="." unique_id=209377566]

[node name="GameLayer" type="CanvasLayer" parent="." unique_id=59267117]
follow_viewport_enabled = true

[node name="PlayerLayer" type="CanvasLayer" parent="GameLayer" unique_id=821729792]
layer = 2
follow_viewport_enabled = true

[connection signal="pressed" from="HUD/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="HUD/Lifes/DeadTimer" to="HUD/Lifes" method="_on_dead_timer_timeout"]
